# $Id$

2006-07-08	Konstantin V. Arkhipov

	* ext/src/main/DAOs/Handlers/SharedMemorySegmentHandler.c: implemented
	finally.

2006-07-07	Konstantin V. Arkhipov

	* core/Form/FormUtils.class.php: null's handling are now optional, as
	requested by nk.

2006-07-01	Konstantin V. Arkhipov

	* ext/: SegmentHandler interface implemented.

2006-06-30	Konstantin V. Arkhipov

	* core/OSQL/SelectField.class.php: now supports any instance of
	DialectString as field.

2006-06-29	Konstantin V. Arkhipov

	* meta/builders/ContainerClassBuilder.class.php: naming of
	container's classes changed to avoid collisions with two or more
	self-collected ones.

2006-06-28	Konstantin V. Arkhipov

	* main/DAOs/ObjectQuery.class.php: final class now.

	* meta/builders/ProtoClassBuilder.class.php: deprecated getForm()
	dropped.

	* main/Utils/RussianTextUtils.class.php: deprecated getSuffix()
	dropped.

	* main/DAOs/Handlers/: segment's handling logic separated from
	DAO-workers.

	* src/core/DB/Dialect.c: declarations of timeZone() and
	dropTableMode() corrected.

	* main/DAOs/: sub-directories for Workers and upcoming Handlers
	introduced.

2006-06-27	Konstantin V. Arkhipov

	* ext/: php's extension moved from incubator.

2006-06-27	Anton E. Lebedevich

	* core/OSQL/SelectQuery.class.php: GroupBy class dropped.

2006-06-25	Konstantin V. Arkhipov

	* main/Containers/: sub-directories for Storable and Unified
	containers introduced.

	* core/Base/Timestamp.class.php: extended support of malformed dates,
	normalization introduced for such cases.

	* core/Form/Primitives/PrimitiveDate.class.php: introduced support of
	dates from Jesus' birthday to 9999-12-31.

	* core/Form/Filters/RemoveSymbolsFilter.class.php: removed in favour
	of StringReplaceFilter.

	* core/Form/PlainForm.class.php: Range-related methods moved to
	PrimitiveRange.

	* core/Form/FormUtils.class.php: backward compatibility with php-5.0
	dropped.

	* core/Form/: sub-directories for Filters and Primitives introduced.
