@@ -1,0 +1,10 @@
+/* $Id$ */
+
+#ifndef ONPHP_CORE_STATIC_FACTORY_H
+#define ONPHP_CORE_STATIC_FACTORY_H
+
+PHPAPI zend_class_entry *onphp_ce_StaticFactory;
+
+extern zend_function_entry onphp_funcs_StaticFactory[];
+
+#endif /* ONPHP_CORE_STATIC_FACTORY_H */
